--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url = https://hcover333-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+backend_url=https://dealership.20ipypzwzpxf.us-south.codeengine.appdomain.cloud
 sentiment_analyzer_url=your code engine deployment url
