--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url=https://dealership.20ipypzwzpxf.us-south.codeengine.appdomain.cloud
-sentiment_analyzer_url=your code engine deployment url
+sentiment_analyzer_url=https://sentianalyzer.20lg3pvywzk3.us-south.codeengine.appdomain.cloud/
